# html-filter

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  tarpaulin.toml  typos.toml
.github/workflows/: build.yml  clippy.yml  coverage.yml  doc.yml  fmt.yml  nightly.yml  spelling.yml  test.yml
src/: errors.rs  filter.rs  lib.rs  prelude.rs  tag.rs  types.rs
src/filter/: api.rs  element.rs  mod.rs  node_type.rs  types.rs
src/parse/: mod.rs  tag.rs
src/types/: html.rs  html_builder.rs  mod.rs  tag.rs
tests/: doctests.rs  errors.rs  file.rs  filter.rs  match.rs  mod.rs  synthax.rs
tests/data/: index.html
tests/files/: errors.rs  filter.rs  find.rs  full.rs  matches.rs  mod.rs  strings.rs  trim.rs
