[package]
name = "html-filter"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Tom Webber"]
license = "MIT OR Apache-2.0"
keywords = ["parser", "html", "scraping"]
description = "Crate to parse, filter, search and edit an HTML file."
repository = "https://github.com/t-webber/html-filter"
categories = ["command-line-interface", "parser-implementations", "parsing"]

[dependencies]

[features]
debug = []
